refactor(WebSocketClient): 重构 WebSocket 客户端
- 更新了 WebSocket 客户端的 UI 设计
- 优化了消息发送和日志记录的功能
- 添加了扩展指令和脚本功能
- 改进了循环发送和编码切换的实现
- 重构了部分代码结构，提高了可维护性

--- a/DevKit/Views/MainWindow.xaml
+++ b/DevKit/Views/MainWindow.xaml
@@ -76,7 +76,7 @@
                     VerticalAlignment="Center"
                     FontFamily="/DevKit;component/Fonts/#iconfont"
                     FontSize="16"
-                    Text="&#xea89;" />
+                    Text="&#xe654;" />
 
                 <TextBlock
                     Grid.Column="1"
