--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -54,7 +54,7 @@
                 <hc:TextBox
                     Margin="10,0"
                     VerticalAlignment="Center"
-                    hc:InfoElement.Placeholder="格式：127.0.0.1"
+                    hc:InfoElement.Placeholder="127.0.0.1"
                     hc:InfoElement.ShowClearButton="True"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Text="{Binding RemoteAddress}"
@@ -73,7 +73,7 @@
                 <hc:TextBox
                     Margin="10,0"
                     VerticalAlignment="Center"
-                    hc:InfoElement.Placeholder="格式：9000"
+                    hc:InfoElement.Placeholder="9000"
                     hc:InfoElement.ShowClearButton="True"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     MaxLength="5"
