refactor(network): 重构网络相关功能
- 移除 LoadClientConfigCache 和 SaveConfigCache 方法- 新增 GetIPv4Address 方法，用于获取本机 IPv4地址
- 优化 GetAllIPv4Addresses 方法，过滤掉本地回环地址
- 更新 TCP、UDP 和 WebSocket 相关视图和 ViewModel
- 统一界面样式，增加边框和对齐方式
- 调整部分控件布局和属性

--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -213,12 +213,14 @@
             <TextBox
                 x:Name="InputColorHexValueTextBox"
                 Grid.Column="0"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
                 FontSize="14"
                 MaxLength="7" />
 
             <Button
                 Grid.Column="1"
                 Margin="10,0,0,0"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
                 Command="{Binding ColorHexToRgbCommand}"
                 CommandParameter="{Binding Text, ElementName=InputColorHexValueTextBox}"
                 Content="转为RGB" />
@@ -234,6 +236,7 @@
             <ComboBox
                 x:Name="ColorSchemeComboBox"
                 Grid.Column="0"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
                 FontSize="14"
                 ItemsSource="{Binding ColorSchemes}"
                 SelectedIndex="0">
