--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -303,6 +303,7 @@
                     Grid.Column="0"
                     Padding="4"
                     VerticalContentAlignment="Top"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     Text="{Binding UserInputText}"
                     TextWrapping="Wrap"
@@ -313,6 +314,7 @@
                     Width="65"
                     Height="60"
                     Margin="10,0,0,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding SendCommand}"
                     Content="发送"
                     Style="{StaticResource ButtonPrimary}" />
@@ -339,6 +341,7 @@
                     x:Name="LoopCheckBox"
                     Grid.Column="1"
                     Margin="10,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Content="循环发送">
                     <b:Interaction.Triggers>
                         <b:EventTrigger EventName="Checked">
@@ -354,6 +357,7 @@
                 <TextBox
                     Grid.Column="2"
                     Width="60"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
                     MaxLength="5"
@@ -369,6 +373,7 @@
                     Grid.Column="4"
                     Width="80"
                     Margin="10,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     SelectedIndex="0">
                     <ComboBoxItem Content="16进制" />
                     <ComboBoxItem Content="ASCII" />
@@ -385,6 +390,7 @@
                     Grid.Column="5"
                     Margin="10,0,0,0"
                     HorizontalAlignment="Right"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Content="16进制"
                     IsChecked="{Binding IsHexSelected}" />
             </Grid>
