--- a/DevKit/Views/UdpServerView.xaml
+++ b/DevKit/Views/UdpServerView.xaml
@@ -55,6 +55,7 @@
                 <ComboBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     IsEnabled="{Binding ListenState, Converter={StaticResource ListenStateConverterKey}}"
                     ItemsSource="{Binding LocalAddressCollection}"
@@ -79,13 +80,17 @@
                     Grid.Column="1"
                     MinWidth="90"
                     Margin="10,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     IsEnabled="{Binding ListenState, Converter={StaticResource ListenStateConverterKey}}"
                     MaxLength="5"
                     Text="{Binding ListenPort}"
                     TextWrapping="NoWrap" />
 
-                <Button Grid.Column="2" Command="{Binding ServerListenCommand}">
+                <Button
+                    Grid.Column="2"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
+                    Command="{Binding ServerListenCommand}">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
@@ -110,6 +115,7 @@
                 x:Name="ClientListBox"
                 Grid.Row="2"
                 HorizontalContentAlignment="Stretch"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
                 ItemsSource="{Binding ClientCollection}"
                 ScrollViewer.CanContentScroll="False"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled">
@@ -193,6 +199,7 @@
                 <CheckBox
                     Grid.Column="1"
                     Margin="10,0,0,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding ShowHexCheckBoxClickCommand}"
                     Content="HEX显示"
                     IsChecked="{Binding ShowHex}" />
@@ -202,6 +209,7 @@
                 x:Name="MessageListBox"
                 Grid.Row="1"
                 Margin="0,10"
+                BorderBrush="{DynamicResource DevKitBorderBrush}"
                 ItemsSource="{Binding MessageCollection}"
                 ScrollViewer.CanContentScroll="False"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled">
@@ -288,6 +296,7 @@
                     x:Name="ExCommandComboBox"
                     Grid.Column="0"
                     HorizontalContentAlignment="Stretch"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     ItemsSource="{Binding ExCommandCollection}"
                     SelectedIndex="0">
@@ -332,6 +341,7 @@
                 <Button
                     Grid.Column="1"
                     Margin="10,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Command="{Binding AddExtensionCommand}"
                     Content="&#xe6aa;"
                     FontFamily="/DevKit;component/Fonts/#iconfont"
@@ -340,6 +350,7 @@
                 <CheckBox
                     x:Name="LoopCheckBox"
                     Grid.Column="2"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     Content="循环发送"
                     IsChecked="{Binding LoopSend}">
                     <b:Interaction.Triggers>
@@ -352,6 +363,7 @@
                 <TextBox
                     Grid.Column="3"
                     Margin="10,0"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     IsEnabled="{Binding ElementName=LoopCheckBox, Path=IsChecked}"
                     MaxLength="5"
@@ -373,6 +385,7 @@
                     Grid.Column="0"
                     Padding="4"
                     VerticalContentAlignment="Top"
+                    BorderBrush="{DynamicResource DevKitBorderBrush}"
                     FontSize="14"
                     Text="{Binding UserInputText}"
                     TextWrapping="Wrap"
@@ -387,6 +400,7 @@
 
                     <CheckBox
                         Grid.Row="0"
+                        BorderBrush="{DynamicResource DevKitBorderBrush}"
                         Content="HEX发送"
                         IsChecked="{Binding SendHex}" />
 
@@ -394,13 +408,14 @@
                         Grid.Row="1"
                         Margin="0,7"
                         HorizontalAlignment="Stretch"
+                        BorderBrush="{DynamicResource DevKitBorderBrush}"
                         Command="{Binding ClearMessageCommand}"
                         Content="清屏" />
 
                     <Button
                         Grid.Row="2"
                         HorizontalAlignment="Stretch"
-                        BorderThickness="0"
+                        BorderBrush="{DynamicResource DevKitBorderBrush}"
                         Command="{Binding SendMessageCommand}"
                         Content="发送" />
                 </Grid>
