perf(ui): 优化 UI 响应性能
- 将 TcpClientViewModel、TcpServerViewModel、UdpClientViewModel 和 WebSocketClientViewModel 中的 Dispatcher.Invoke 替换为 Dispatcher.BeginInvoke
- 在 TcpServerView.xaml 中将 ClientCollection 绑定更改为 Clients

--- a/DevKit/Views/TcpServerView.xaml
+++ b/DevKit/Views/TcpServerView.xaml
@@ -113,7 +113,7 @@
                 Margin="0,10,10,0"
                 HorizontalContentAlignment="Stretch"
                 BorderBrush="{DynamicResource DevKitBorderBrush}"
-                ItemsSource="{Binding ClientCollection}"
+                ItemsSource="{Binding Clients}"
                 ScrollViewer.CanContentScroll="False"
                 ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListBox.ItemTemplate>
