refactor(TcpServer): 重构 TCP 服务器功能
- 移除 LogCache 类和相关数据库操作
- 重构 SocketClientModel，添加 Logs 属性
- 更新 TcpServerViewModel，使用 LogModel 替代 LogCache
- 修改 TcpServerView，绑定 LogModel 以显示

--- a/DevKit/Views/TcpServerView.xaml
+++ b/DevKit/Views/TcpServerView.xaml
@@ -3,11 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-    xmlns:cache="clr-namespace:DevKit.Cache"
     xmlns:cvt="clr-namespace:DevKit.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:model="clr-namespace:DevKit.Models"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:utils="clr-namespace:DevKit.Utils"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
@@ -262,7 +262,7 @@
                         <ContextMenu Width="120" PlacementTarget="{Binding ElementName=CommunicationLogListBox}">
                             <MenuItem
                                 Command="{Binding CopyLogCommand}"
-                                CommandParameter="{Binding Path=PlacementTarget.(ListBox.SelectedItem).(cache:LogCache.Content), RelativeSource={RelativeSource AncestorType=ContextMenu}}"
+                                CommandParameter="{Binding Path=PlacementTarget.(ListBox.SelectedItem).(model:LogModel.Content), RelativeSource={RelativeSource AncestorType=ContextMenu}}"
                                 Header="复制" />
                         </ContextMenu>
                     </ListBox.ContextMenu>
