style(devkit): 移除上下文菜单的 PlacementTarget 属性- 在 TcpClientView、TcpServerView、UdpClientView、UdpServerView 和 WebSocketClientView 中移除了 ContextMenu 的 PlacementTarget属性 - 移除该属性可以简化 XAML 代码结构，并依赖于默认的上下文菜单定位行为 - 此更改不影响功能，仅优化了 XAML 的可读性和简洁性

--- a/DevKit/Views/TcpServerView.xaml
+++ b/DevKit/Views/TcpServerView.xaml
@@ -259,7 +259,7 @@
                     </b:Interaction.Behaviors>
 
                     <ListBox.ContextMenu>
-                        <ContextMenu Width="120" PlacementTarget="{Binding ElementName=CommunicationLogListBox}">
+                        <ContextMenu Width="120">
                             <MenuItem
                                 Command="{Binding CopyLogCommand}"
                                 CommandParameter="{Binding Path=PlacementTarget.(ListBox.SelectedItem).(model:LogModel.Content), RelativeSource={RelativeSource AncestorType=ContextMenu}}"
