--- a/DevKit/Views/WebSocketServerView.xaml
+++ b/DevKit/Views/WebSocketServerView.xaml
@@ -93,13 +93,12 @@
                     Text="路径" />
 
                 <hc:TextBox
-                    Grid.Column="1"
                     Margin="10,0"
                     hc:InfoElement.Placeholder="非必填"
                     hc:InfoElement.ShowClearButton="True"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     IsEnabled="{Binding Content, ElementName=ListenStateButton, Converter={StaticResource ListenStateConverterKey}}"
-                    Text="{Binding RequestPath}"
+                    Text="{Binding CustomPath}"
                     TextWrapping="NoWrap" />
             </DockPanel>
 
@@ -121,14 +120,14 @@
                     hc:InfoElement.Placeholder="监听后自动生成"
                     BorderBrush="{DynamicResource DevKitBorderBrush}"
                     IsReadOnly="True"
-                    Text="{Binding WebSocketUrl}"
+                    Text="{Binding WebSocketPath}"
                     TextWrapping="NoWrap" />
 
                 <Button
                     Grid.Column="2"
                     Margin="10,0"
                     BorderThickness="0"
-                    Command="{Binding CopyWebSocketUrlCommand}"
+                    Command="{Binding CopyWebSocketPathCommand}"
                     Content="复制" />
             </Grid>
 
@@ -149,6 +148,7 @@
                 </DockPanel>
 
                 <Button
+                    x:Name="ListenStateButton"
                     Grid.Column="1"
                     Margin="10,0"
                     HorizontalAlignment="Stretch"
@@ -240,7 +240,6 @@
                 </Border>
 
                 <ListBox
-                    x:Name="CommunicationLogListBox"
                     Grid.Row="1"
                     Margin="0,10"
                     BorderBrush="{StaticResource DevKitBorderBrush}"
@@ -308,7 +307,7 @@
                     </b:Interaction.Behaviors>
 
                     <ListBox.ContextMenu>
-                        <ContextMenu Width="120" PlacementTarget="{Binding ElementName=CommunicationLogListBox}">
+                        <ContextMenu Width="120">
                             <MenuItem
                                 Command="{Binding CopyLogCommand}"
                                 CommandParameter="{Binding Path=PlacementTarget.(ListBox.SelectedItem).(model:LogModel.Content), RelativeSource={RelativeSource AncestorType=ContextMenu}}"
